--- a/heuristics/heuristics.cabal
+++ b/heuristics/heuristics.cabal
@@ -7,20 +7,20 @@ author:              Arnau Abella
 maintainer:          arnauabella@gmail.com
 copyright:           2020 Arnau Abella
 extra-source-files:  README.md
-
 source-repository head
   type:                git
   location:            https://github.com/monadplus/AMMM-project.git
 
 common common-options
     build-depends:    base ^>=4.13.0.0
-
     default-language: Haskell2010
-
     other-extensions: OverloadedStrings
                       BangPatterns
-
+    ghc-options:      -O2
     ghc-options:      -Wall
+                      -Werror
+                      -- -Wno-unused-imports
+                      -Wno-name-shadowing
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
@@ -29,28 +29,26 @@ common common-options
                       -Wpartial-fields
                       -fhide-source-paths
                       -freverse-errors
-                      -Wno-name-shadowing
   if impl(ghc >= 8.8.1)
     ghc-options:      -Wmissing-deriving-strategies
-                      -Werror=missing-deriving-strategies
-                      -Werror=unused-matches
 
 executable heuristics
   import:              common-options
   main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       heuristics
+  build-depends:       heuristics,
+                       optparse-applicative ^>=0.16
   hs-source-dirs:      app
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
 library
   import:             common-options
   hs-source-dirs:     src
   exposed-modules:    Generators
-  -- other-modules:
-  -- other-extensions:
-
+  other-modules:      Internal.Generators
+                      Internal.OPL
+                      Internal.Types
   build-depends:      array              ^>=0.5.4,
+                      aeson              ^>=1.5.4,
                       bytestring         ^>=0.10,
                       containers         ^>=0.6,
                       generic-lens       ^>=2.0,
