--- a/heuristics/heuristics.cabal
+++ b/heuristics/heuristics.cabal
@@ -44,9 +44,13 @@ library
   import:             common-options
   hs-source-dirs:     src
   exposed-modules:    Generators
-  other-modules:      Internal.Generators
-                      Internal.OPL
-                      Internal.Types
+                        Internal.Generators
+                        Internal.OPL
+                        Internal.Types
+                        Internal.Greedy
+                        Internal.LocalSearch
+                        Internal.GRASP
+
   build-depends:      array              ^>=0.5.4,
                       aeson              ^>=1.5.4,
                       bytestring         ^>=0.10,
@@ -55,11 +59,17 @@ library
                       microlens-platform ^>=0.4,
                       mtl                ^>=2.2,
                       mwc-random         ^>=0.15,
-                      text               ^>=1.2
+                      text               ^>=1.2,
 
 test-suite heuristics-test
   default-language:    Haskell2010
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             MyLibTest.hs
-  build-depends:       base ^>=4.13.0.0
+  main-is:             Spec.hs
+  other-modules:       Test.OPL
+  build-depends:        heuristics,
+                        base        ^>=4.13.0.0,
+                        bytestring  ^>=0.10,
+                        hspec       ^>=2.7.0,
+                        microlens-platform ^>=0.4,
+                        QuickCheck  ^>=2.14,
