--- a/heuristics/heuristics.cabal
+++ b/heuristics/heuristics.cabal
@@ -55,6 +55,7 @@ library
                       aeson              ^>=1.5.4,
                       bytestring         ^>=0.10,
                       containers         ^>=0.6,
+                      deepseq            ^>=1.4,
                       generic-lens       ^>=2.0,
                       microlens-platform ^>=0.4,
                       mtl                ^>=2.2,
