--- a/heuristics/heuristics.cabal
+++ b/heuristics/heuristics.cabal
@@ -17,7 +17,7 @@ common common-options
     other-extensions: OverloadedStrings
                       BangPatterns
     ghc-options:      -O2
-    ghc-options:      -Wall
+                      -Wall
                       -Werror
                       -- -Wno-unused-imports
                       -Wno-name-shadowing
@@ -45,13 +45,13 @@ library
   hs-source-dirs:     src
   exposed-modules:    Generators
                       Heuristics
-                        Internal.Generators
-                        Internal.OPL
-                        Internal.Types
-                        Internal.Greedy
-                        Internal.LocalSearch
-                        Internal.GRASP
-                        Internal.Pretty
+                      Internal.Generators
+                      Internal.OPL
+                      Internal.Types
+                      Internal.Greedy
+                      Internal.LocalSearch
+                      Internal.GRASP
+                      Internal.Pretty
 
   build-depends:      array              ^>=0.5.4,
                       aeson              ^>=1.5.4,
@@ -64,7 +64,7 @@ library
                       mwc-random         ^>=0.15,
                       text               ^>=1.2,
 
-test-suite heuristics-test
+test-suite heuristics-tests
   default-language:    Haskell2010
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
