add local search

--- a/heuristics/heuristics.cabal
+++ b/heuristics/heuristics.cabal
@@ -45,13 +45,11 @@ library
   hs-source-dirs:     src
   exposed-modules:    Generators
                       Heuristics
-                      Internal.Generators
-                      Internal.OPL
-                      Internal.Types
-                      Internal.Greedy
-                      Internal.LocalSearch
-                      Internal.GRASP
-                      Internal.Pretty
+                        Internal.Generators
+                        Internal.Heuristics
+                        Internal.OPL
+                        Internal.Pretty
+                        Internal.Types
 
   build-depends:      array              ^>=0.5.4,
                       aeson              ^>=1.5.4,
