--- a/heuristics/heuristics.cabal
+++ b/heuristics/heuristics.cabal
@@ -55,12 +55,14 @@ library
                       aeson              ^>=1.5.4,
                       bytestring         ^>=0.10,
                       containers         ^>=0.6,
+                      data-default       ^>=0.7,
                       deepseq            ^>=1.4,
                       generic-lens       ^>=2.0,
                       microlens-platform ^>=0.4,
                       mtl                ^>=2.2,
                       mwc-random         ^>=0.15,
                       text               ^>=1.2,
+                      time               ^>=1.9,
 
 test-suite heuristics-tests
   default-language:    Haskell2010
